Fix question text wrap issue

--- a/web/src/components/Question/style.css
+++ b/web/src/components/Question/style.css
@@ -7,16 +7,10 @@
 	display: inline-block;
 	margin: 0 20px 10px 0;
     .title {
-        display: -moz-box;
-        display: -webkit-box;
         &:before {
             content: attr(title) ".";
             margin-right: 5px;
-        }
-        .text {
-            -moz-box-flex: 1;
-            -webkit-box-flex: 1;
-            box-flex: 1;
+            float: left;
         }
     }
 }
